@@ -3,8 +3,10 @@ youker-assistant (1.0.1-0ubuntu1) trusty; urgency=low
   * Modify display mode of weather forecast and system settings.
   * Add file manager and font style settings.
   * Perfecting the system settings and restore default settings better.
+  * Remember user account.
+  * Change window control button position of youkerf-assistant.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 26 Feb 2014 15:45:44 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 26 Feb 2014 17:31:18 +0800
 
 youker-assistant (1.0.0-0ubuntu1) trusty; urgency=low
 
